--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<a href="#" data-toggle="modal" data-target="#login-modal">Click here to Login in to your Xively account </a>
+<a href="#" data-toggle="modal" data-target="#login-modal">Xively account Login</a>
 
 <!-- START OF LOGIN SCREEN -->
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
@@ -98,7 +98,7 @@
 <!-- CopnvasJS charts -->
 <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
-
+<script type="text/javascript" src="resource/config.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 
 </body>
