update the screen title

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
 	<div class="modal-dialog">
 		<div class="loginmodal-container">
-			<h1>Login to Your Xively Account</h1>
+			<h1>Xively Account Login</h1>
 			<br>
 			<form>
 				<input id="email" type="text" name="email" placeholder="Email address">
