--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<a href="#" data-toggle="modal" data-target="#login-modal">Xively Account Login</a>
+<a href="#" data-toggle="modal" data-target="#login-modal" style="display: none;">Xively Account Login</a>
 
 <!-- START OF LOGIN SCREEN -->
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
